--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "license": "All Rights Reserved",
   "private": "true",
   "scripts": {
-    "serve": "http-server ."
+    "serve": "webpack serve"
   },
   "devDependencies": {
-    "http-server": "^0.12.3"
+    "@types/node": "^14.14.16",
+    "gts": "^3.0.3",
+    "typescript": "^4.1.3",
+    "yarn-upgrade-all": "^0.5.4"
   }
 }
