--- a/package.json
+++ b/package.json
@@ -6,8 +6,16 @@
   },
   "devDependencies": {
     "@types/node": "^14.14.16",
+    "css-loader": "^5.0.1",
     "gts": "^3.0.3",
+    "html-webpack-plugin": "^4.5.0",
+    "style-loader": "^2.0.0",
+    "ts-loader": "^8.0.12",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
+    "webpack": "^5.11.0",
+    "webpack-cli": "^4.3.0",
+    "webpack-dev-server": "^3.11.0",
     "yarn-upgrade-all": "^0.5.4"
   }
 }
