--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "license": "All Rights Reserved",
   "private": "true",
+  "engines": {
+    "node": ">=14"
+  },
   "scripts": {
     "serve": "webpack serve"
   },
+  "dependencies": {
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
+  },
   "devDependencies": {
     "@types/node": "^14.14.16",
+    "@types/react-dom": "^17.0.0",
     "css-loader": "^5.0.1",
     "gts": "^3.0.3",
     "html-webpack-plugin": "^4.5.0",
