--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "serve": "webpack serve"
   },
   "dependencies": {
+    "antd": "^4.9.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
