--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "antd": "^4.9.4",
+    "gifshot": "^0.4.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
