--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "node": ">=14"
   },
   "scripts": {
-    "serve": "webpack serve"
+    "serve": "webpack serve",
+    "release": "webpack --progress"
   },
   "dependencies": {
     "antd": "^4.9.4",
